feat 결제/리워드 로직에 Redis 분산 락을 적용하여 동시 요청 충돌 방지

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=tiffndla0423
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jwt.secret = testtesttesttesttestjwtjwtjwtjwtjwt
+
+spring.redis.host=localhost
+spring.redis.port=6379
